objects/Learning_Response_Result__c.object
<CustomObject>
    <fields>
        <fullName>Active_Response_Result_Record__c</fullName>
        <formula>Training__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Response &amp; Result Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Time_Selected_by_User_Slot1__c</fullName>
        <label>Date/Time Selected by User Slot1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Selected_by_User_Slot2__c</fullName>
        <label>Date/Time Selected by User Slot2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Selected_by_User_Slot3__c</fullName>
        <label>Date/Time Selected by User Slot3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_of_Participant__c</fullName>
        <label>Email of Participant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date_Time_for_Slot1__c</fullName>
        <formula>IF( ISBLANK( Date_Time_Selected_by_User_Slot1__c ),Date_Time_Selected_by_User_Slot1__c, Training__r.Training_Date_and_Time1__c +( IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;0.5 Hour&apos;) ,0.02083333, IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;1 Hour&apos;) ,0.04166667, IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;1.5 Hours&apos;) ,0.0625,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;2 Hours&apos;) ,0.08333333,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;2.5 Hours&apos;) ,0.1041667,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;3 Hours&apos;) ,0.125,0.04166667))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date/Time for Slot1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Time_for_Slot2__c</fullName>
        <formula>IF( ISBLANK( Date_Time_Selected_by_User_Slot2__c ),Date_Time_Selected_by_User_Slot2__c, Training__r.Training_Date_and_Time2__c +( IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;0.5 Hour&apos;) ,0.02083333, IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;1 Hour&apos;) ,0.04166667, IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;1.5 Hours&apos;) ,0.0625,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;2 Hours&apos;) ,0.08333333,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;2.5 Hours&apos;) ,0.1041667,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;3 Hours&apos;) ,0.125,0.04166667))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date/Time for Slot2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Time_for_Slot3__c</fullName>
        <formula>IF( ISBLANK(Date_Time_Selected_by_User_Slot3__c),Date_Time_Selected_by_User_Slot3__c, Training__r.Training_Date_and_Time3__c +( IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;0.5 Hour&apos;) ,0.02083333, IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;1 Hour&apos;) ,0.04166667, IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;1.5 Hours&apos;) ,0.0625,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;2 Hours&apos;) ,0.08333333,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;2.5 Hours&apos;) ,0.1041667,IF( ISPICKVAL( Training__r.Duration_of_Training__c ,&apos;3 Hours&apos;) ,0.125,0.04166667))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date/Time for Slot3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exam_Result__c</fullName>
        <label>Exam Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Comment__c</fullName>
        <label>Feedback Comment</label>
        <length>50768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Mail_Body__c</fullName>
        <formula>Training__r.Body_of_Feedback_Invite_Mail__c</formula>
        <label>Feedback Mail Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Question_1_Response__c</fullName>
        <label>Feedback Question 1 Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Question_1__c</fullName>
        <formula>Training__r.Feedback_Question_1__c</formula>
        <label>Feedback Question 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Question_2_Response__c</fullName>
        <label>Feedback Question 2 Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Question_2__c</fullName>
        <formula>Training__r.Feedback_Question_2__c</formula>
        <label>Feedback Question 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Question_3_Response__c</fullName>
        <label>Feedback Question 3 Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Question_3__c</fullName>
        <formula>Training__r.Feedback_Question_3__c</formula>
        <label>Feedback Question 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_Participant_Mail_Body__c</fullName>
        <formula>Training__r.Body_of_Invite_Participant_Mail__c</formula>
        <label>Invite Participant Mail Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_R_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id ,  Name_of_Participant__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L&amp;R Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Participant__c</fullName>
        <label>Name of Participant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_time_Attempted1_Exam__c</fullName>
        <formula>IF(Number_of_time_Attempted_Exam__c!=0, Number_of_time_Attempted_Exam__c -1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of time Attempted Exam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_time_Attempted_Exam__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Please Do not use this filed on page layout . this field is calculating how many times the exam is scheduled for the user. Due to miss-understanding i am changing the display name. I can not change the API as it is used in so many classes</description>
        <label>Number of time Exam Scheduled</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_for_Exam_Participation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Points for Exam Participation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_for_Exam_Passed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Points for Exam Passed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_for_Feedback_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Points for Feedback Received</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_for_Training_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Points for Training Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Summary__c</fullName>
        <label>Result Summary</label>
        <referenceTo>L_R_Result_Summary__c</referenceTo>
        <relationshipLabel>Training And Participant Detail</relationshipLabel>
        <relationshipName>Learning_Response_Result</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected_Slots_by_Participants__c</fullName>
        <description>This field is for reporting purpose</description>
        <inlineHelpText>This field is for reporting purpose</inlineHelpText>
        <label>Selected Slots by Participants</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Slot 1</fullName>
                </value>
                <value>
                    <fullName>Slot 2</fullName>
                </value>
                <value>
                    <fullName>Slot 3</fullName>
                </value>
                <value>
                    <fullName>Slot 4</fullName>
                </value>
                <value>
                    <fullName>Slot 5</fullName>
                </value>
                <value>
                    <fullName>Slot 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Time_for_Slot1__c</fullName>
        <formula>Training__r.Training_Date_and_Time1__c</formula>
        <label>Start Date/Time for Slot1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time_for_Slot2__c</fullName>
        <formula>Training__r.Training_Date_and_Time2__c</formula>
        <label>Start Date/Time for Slot2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time_for_Slot3__c</fullName>
        <formula>Training__r.Training_Date_and_Time3__c</formula>
        <label>Start Date/Time for Slot3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_of_Exam__c</fullName>
        <label>Status of Exam</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Participant__c</fullName>
        <label>Status of Participant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited for Training</fullName>
                </value>
                <value>
                    <fullName>Signed for Training</fullName>
                </value>
                <value>
                    <fullName>Attended Training</fullName>
                </value>
                <value>
                    <fullName>Went through Training Slides</fullName>
                </value>
                <value>
                    <fullName>Taken Exam (Passed)</fullName>
                </value>
                <value>
                    <fullName>Taken Exam (Failed)</fullName>
                </value>
                <value>
                    <fullName>Feedback Requested</fullName>
                </value>
                <value>
                    <fullName>Feedback Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Vertical_BU__c</fullName>
        <label>Sub-Vertical BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Network_ID__c</fullName>
        <label>TE Network ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <formula>Training__r.Date_of_Training__c</formula>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Learning Response &amp; Result</relationshipLabel>
        <relationshipName>Learning_Response_Result</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Record_ID__c</fullName>
        <label>User Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Learning Response &amp; Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name_of_Participant__c</columns>
        <columns>Training__c</columns>
        <columns>Status_of_Participant__c</columns>
        <columns>Sub_Vertical_BU__c</columns>
        <columns>Training_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L&amp;R-{0000000000}</displayFormat>
        <label>Learning Response &amp; Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Response &amp; Result</pluralLabel>
    <recordTypes>
        <fullName>Participant_with_Response_Date_Slots</fullName>
        <active>true</active>
        <label>Participant with Response &amp; Date Slots</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participant_with_Response_Exam_Date_Slots</fullName>
        <active>true</active>
        <label>Participant with Response Exam &amp; Date Slots</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participant_with_Response_and_Exam_without_Slots</fullName>
        <active>true</active>
        <label>Participant with Response and Exam without Slots</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participant_with_Response_without_Slots</fullName>
        <active>true</active>
        <label>Participant with Response without Slots</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>